--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "mvc_design",
+  "name": "burger",
   "version": "1.0.0",
-  "description": "",
+  "description": "Eat me ",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "mysql": "^2.16.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mora5925/Burger"
   },
-  "devDependencies": {
-    "handlebars-helper-css": "^0.1.0"
+  "author": "brigil",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mora5925/Burger"
+  },
+  "homepage": "http://github.com/mora5925/Burger#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
+    "mysql": "^2.18.1"
   }
 }
