--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/mora5925/Burger"
   },
-  "author": "brigil",
+  "author": "Samer",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mora5925/Burger"
